<resources>
    <string name="app_name">To Do List</string>
    <string name="to_do_list">To Do List</string>
    <string name="add_new_task">Add New Task</string>
    <string name="enter_your_task">enter your task</string>
    <string name="select_time">Select time</string>
    <string name="add_task">Add Task</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="language">Language</string>
    <string name="light">Light</string>
    <string name="english">English</string>
    <string name="modes">Modes</string>
    <string name="select_date" >Select Date</string>

    <string-array name="Modes">
        <item>Light</item>
        <item>Night</item>

    </string-array>

    <string-array name="Languages">
        <item>English</item>
        <item>Arabic</item>

    </string-array>
</resources>