<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/settings_bg"
    android:layout_height="match_parent">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/Abl_settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/settings"
                android:textColor="@color/settings_text_color"
                android:textSize="30sp"
                android:textStyle="bold" />
        </com.google.android.material.appbar.MaterialToolbar>


    </com.google.android.material.appbar.AppBarLayout>

<TextView
    android:id="@+id/tv_Language"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/language"
    android:textStyle="bold"
    android:textColor="@color/Language_and_mode_color"
    android:textSize="20sp"
    android:layout_marginStart="10dp"
    app:layout_constraintTop_toBottomOf="@id/Abl_settings"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="15dp"
    />






    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_Languages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_Language"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="@color/bg_AutoComplete"
        >
        <AutoCompleteTextView
            android:id="@+id/Actv_Languages"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/english"
            android:inputType="none"
            android:textColor="@color/blue"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tv_Modes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modes"
        app:layout_constraintTop_toBottomOf="@id/til_Languages"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/Language_and_mode_color"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_Modes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_Modes"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="@color/bg_AutoComplete"
        >
        <AutoCompleteTextView
            android:id="@+id/Actv_Modes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/light"
            android:inputType="none"
            android:textColor="@color/blue"
            />

    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>