<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_add_new_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_task"
        android:textColor="@color/AddNewTask_text_color"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Til_enter_task"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_add_new_task"
        android:layout_marginHorizontal="15dp">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Tiet_enter_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/enter_your_task"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_select_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="15dp"

        android:text="@string/select_time"
        android:textColor="@color/selectTimeColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Til_enter_task"

        />


    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="12:00"
        app:layout_constraintEnd_toEndOf="@id/tv_select_time"
        app:layout_constraintStart_toStartOf="@id/tv_select_time"
        app:layout_constraintTop_toBottomOf="@id/tv_select_time" />

    <TextView
        android:id="@+id/tv_select_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="15dp"

        android:text="@string/select_date"
        android:textColor="@color/selectTimeColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Til_enter_task"

        />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1/1/2024"
        app:layout_constraintEnd_toEndOf="@id/tv_select_date"
       app:layout_constraintStart_toStartOf="@id/tv_select_date"
        app:layout_constraintTop_toBottomOf="@id/tv_select_date" />





    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_time"
        />
</androidx.constraintlayout.widget.ConstraintLayout>